GPII-1019-test: Building sharing tab

--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/context.css"/>
+        <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/sharing.css"/>
 
         <!-- This is breaking the slider color -->
         <!-- ><link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
