--- a/src/context/html/contextPanelTemplate.html
+++ b/src/context/html/contextPanelTemplate.html
@@ -1,78 +1,18 @@
-<form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
-    <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
-        <a class="gpii-prefsEditor-link gpii-prefsEditor-quickEditorLink gpiic-prefsEditor-quickEditorLink"></a>
-        <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-pmt-userLogoutLink gpiic-prefsEditor-userLogoutLink flc-prefsEditor-reset"></a>
-    </div>
-    <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
-        <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
-            <label class="gpiic-pmt-preferenceSetSelectionButtonMyPreferencesLabel gpii-prefsEditor-preferenceSetSelectionButtonLabel"></label>
-        </span>
-        <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonAllPreferences gpii-prefsEditor-preferenceSetSelectionButtonNotSelected">
-            <label class="gpiic-pmt-preferenceSetSelectionButtonAllPreferencesLabel gpii-prefsEditor-preferenceSetSelectionButtonLabel"></label>
-        </span>
-    </div>
-    <div class="gpii-prefsEditor-preferencesContainer">
-        <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
-            <div class="gpiic-visualAlternatives gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-volumeGroup gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-languageGroup gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
-            <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup gpii-prefsEditor-margin-bottom"></div>
-            <div class="gpii-prefsEditor-baseSetRow">
-                <span class="gpiic-prefsEditor-setLabel gpii-prefsEditor-baseSetLabel"></span>
-            </div>
-        </div>
-    </div>
-    <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
-        <div class="gpii-prefsEditor-panelBottomLeft gpii-prefsEditor-padding-left">
-            <div class="gpii-prefsEditor-panelBottomLink">
-                <label for="setsButton" class="gpiic-prefsEditor-context-icon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-icon-left" role="presentation"></label>
-                <input id="setsButton" class="gpiic-prefsEditor-sets-button gpii-prefsEditor-trasparentButton" type="button" value="" tabindex="0"/>
-            </div>
-            <div class="gpii-prefsEditor-panelBottomLink">
-                <label for="accountButton" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-signup-icon" role="presentation"></label>
-                <input id="accountButton" class="gpiic-prefsEditor-account-button gpii-prefsEditor-trasparentButton" type="button" value="" tabindex="0"/>
-            </div>
-        </div>
-        <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
-        <span class="gpii-pmt-saveButtonContainer gpii-prefsEditor-padding-right">
-            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save-adjusters" type="button" value="" />
-            <input id="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-reset" type="button" value="" />
-        </span>
-        <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
-            <h2 class="gpii-prefsEditor-notificationHeader"><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
-            <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart1"></label>
-            <label class="gpii-prefsEditor-notificationMessage gpii-prefsEditor-notificationMessageTOKEN gpiic-prefsEditor-notificationMessagePart2"></label>
-            <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart3"></label>
-            <br/><br/>
-            <div class="gpii-prefsEditor-notificationConfirmationArea">
-                <div class="gpii-prefsEditor-notificationConfirmButton gpiic-prefsEditor-notificationConfirmButton"></div>
-            </div>
-        </div>
-    </div>
-    <div class="gpiic-prefsEditor-contextContainer gpii-prefsEditor-contextContainer">
-        <div class="gpiic-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header-stylingDark">
-            <a href="#" class="gpiic-prefsEditor-contextFrameLink" role="button" aria-label=""><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
-        </div>
-        <div class="gpiic-prefsEditor-contextFrame-rows"></div>
-    </div>
-    <div id="overlay" class="gpiic-context-overlay gpii-context-overlay"></div>
-    <div id="modal" class="gpiic-context-modal gpii-context-modal">
         <div class="gpiic-context-header-tabs gpii-context-header-tabs">
-            <section id="tab1" class="gpiic-tab-conditions gpii-tab-conditions gpii-tab-active" >
-                <h2 class="gpii-context-conditions-label">
-                    <a href="#tab1">
-                        <span class="gpiic-context-conditions-label"></span>
-                    </a>
-                </h2>
-            </section>
-            <section id="tab2" class="gpiic-tab-share gpii-tab-share gpii-tab-deactive">
-                <h2>
-                    <a href="#tab2">
-                        <span class="gpiic-context-share-label gpii-context-sharing-label"></span>
-                    </a>
-                </h2>
-            </section>
+                <section id="tab1" class="gpiic-tab-conditions gpii-tab-conditions" >
+                    <h2>
+                       <a href="#tab1" tabindex="0">
+                           <span class="gpiic-context-conditions-label"></span>
+                       </a>
+                    </h2>
+                </section>
+                <section id="tab2" class="gpiic-tab-share gpii-tab-share">
+                    <h2>
+                       <a href="#tab2" tabindex="0">
+                           <span class="gpiic-context-share-label"></span>
+                       </a>
+                    </h2>
+                </section>
         </div>
         <div class="gpii-context-main">
             <div class="gpiic-context-header gpii-context-header" >
@@ -85,12 +25,15 @@
                      <span class="gpiic-context-deleteset-label"></span>
                 </div>
             </div>
+            <!-- Devices -->
             <div class="gpiic-context-header-devices gpii-context-header-devices">
                 <span class="gpii-devices-adjusterIcons gpii-devices-header-fontIcon"></span>
                 <span class="gpiic-context-header-devices-label gpii-context-header-devices-label"></span>
+                <!-- Add new device -->
                 <div class="gpiic-context-devices-add-new gpii-context-devices-add-new" tabindex="0">
                     <div class="gpiic-context-devices-add-new-label gpii-context-devices-add-new-label"></div>
                 </div>
+                <!-- List of devices -->
                 <div class="gpiic-context-devices-list gpii-context-devices-list-box">
                     <div class="gpiic-context-devices-list-items gpii-context-devices-list-items">
                     <ul class="gpiic-selection-devices gpii-select-device">
@@ -127,9 +70,11 @@
                     <span class="gpiic-context-devices-label gpii-context-devices-label"></span>
                 </div>
             </div>
+            <!-- Time -->
             <div class="gpiic-context-header-time gpii-context-header-time">
                 <span class="gpii-devices-adjusterIcons gpii-context-header-time-fontIcon"></span>
                 <span class="gpiic-context-header-time-label gpii-context-header-time-label"></span>
+                <!-- Add new time -->
                <div class="gpiic-context-time-add-new gpii-context-time-add-new" tabindex="0">
                     <div class="gpiic-context-time-add-new-label gpii-context-time-add-new-label"></div>
                     <div class="gpiic-context-time-whole-div gpii-context-time-whole-div">
@@ -157,30 +102,36 @@
                     </div>
                 </div>
             </div>
+            <!-- Sharing link copy enter mail address       -->
             <div class="gpiic-link-copy-enter-email-address gpii-link-copy-enter-email-address">
                 <div class="gpiic-link-copy gpii-link-copy">
-                    <span class="gpii-devices-adjusterIcons gpii-link-copy-fontIcon"></span>
-                    <input type="button" class="gpiic-context-linkCopyButton gpii-link-copy-label" tabindex="0">
+                    <a href="#link_copy" tabindex="0">
+                        <span class="gpii-devices-adjusterIcons gpii-link-copy-fontIcon"></span>
+                        <span class="gpiic-link-copy-label gpii-link-copy-label"></span>
+                    </a>
                 </div>
                 <div class="gpiic-enter-email-address gpii-enter-email-address">
-                    <input type="text" value="" class="gpiic-enter-email-address-input gpii-enter-email-address-input" tabindex="0"/>
+                    <input  type="text" value="" class="gpiic-enter-email-address-input gpii-enter-email-address-input" tabindex="0">
                 </div>
                 <div class="gpiic-download-copy gpii-download-copy">
-                    <span class="gpii-devices-adjusterIcons gpiic-download-copy-fontIcon gpii-download-copy-fontIcon"></span>
-                    <input type="button" class="gpiic-context-linkDownloadButton gpii-download-copy-label" tabindex="0">
+                    <a href="#download_copy" tabindex="0">
+                        <span class="gpii-devices-adjusterIcons gpiic-download-copy-fontIcon gpii-download-copy-fontIcon"></span>
+                        <span class="gpiic-download-copy-label gpii-download-copy-label"></span>
+                    </a>
                 </div>
                 <div class="gpiic-enter-message gpii-enter-message">
                     <textarea class="gpiic-enter-message-input gpii-enter-message-input" tabindex="0" rows="4" cols=""></textarea> 
                 </div>
                 <div class="gpiic-email-copy gpii-email-copy">
-                    <span class="gpii-devices-adjusterIcons gpiic-email-copy-fontIcon gpii-email-copy-fontIcon disabled"></span>
-                    <input type="button" class="gpiic-context-emailCopyButton gpii-email-copy-label disabled" tabindex="0">
+                    <a href="#email_copy" tabindex="0">
+                        <span class="gpii-devices-adjusterIcons gpiic-email-copy-fontIcon gpii-email-copy-fontIcon"></span>
+                        <span class="gpiic-email-copy-label gpii-email-copy-label"></span>
+                    </a>
                 </div>
             </div>
         </div>
+        <!-- Footer -->
         <div class="gpii-context-footer">
             <input type="button" class="gpiic-context-cancelButton gpii-context-cancel-button">
             <input type="button" class="gpiic-context-doneButton gpii-context-done-button">
         </div>
-    </div>
-</form>
