GPII-1019-test: Fixing Conditions

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -89,42 +89,36 @@
                 <span class="gpii-devices-adjusterIcons gpii-devices-header-fontIcon"></span>
                 <span class="gpiic-context-header-devices-label gpii-context-header-devices-label"></span>
                 <div class="gpiic-context-devices-add-new gpii-context-devices-add-new" tabindex="0">
-                    <div class="gpiic-context-devices-add-new-label gpii-context-devices-add-new-label"></div>
-                </div>
-                <div class="gpiic-context-devices-list gpii-context-devices-list-box">
-                    <div class="gpiic-context-devices-list-items gpii-context-devices-list-items">
-                    <ul class="gpiic-selection-devices gpii-select-device">
-                            <li>
-                                <span class="gpiic-select-device-all-label gpii-select-device-labels gpii-select-device-labels-all"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-desktop-label gpii-select-device-labels"></span> 
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-laptop-label gpii-select-device-labels"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-tablet-label gpii-select-device-labels"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-phone-label gpii-select-device-labels"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-kiosk-label gpii-select-device-labels"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-bankmachine-label gpii-select-device-labels"></span>
-                            </li>
-                            <li>
-                                <span class="gpiic-select-device-other-label gpii-select-device-labels"></span>
-                            </li>
-                    </ul>
-                    </div>
+                     <span class="gpiic-context-devices-add-new-label gpii-context-devices-add-new-label gpii-context-visible"></span>  
+                     <select class="gpiic-context-devices-list-items gpii-context-devices-list-items gpii-context-invisible"  tabindex="0">
+                            <option 
+                                class="gpiic-select-device-all-label gpii-select-device-labels gpii-select-device-labels-all">
+                            </option>
+                            <option
+                                class="gpiic-select-device-desktop-label gpii-select-device-labels"> 
+                            </option>
+                            <options
+                                class="gpiic-select-device-laptop-label gpii-select-device-labels">
+                            </options>
+                            <option
+                                class="gpiic-select-device-tablet-label gpii-select-device-labels">
+                            </option>
+                            <option
+                                class="gpiic-select-device-phone-label gpii-select-device-labels">
+                            </option>
+                            <option
+                                class="gpiic-select-device-kiosk-label gpii-select-device-labels">
+                            </option>
+                            <option
+                                class="gpiic-select-device-bankmachine-label gpii-select-device-labels">
+                            </option>
+                            <option
+                                class="gpiic-select-device-other-label gpii-select-device-labels gpii-select-device-labels-other">
+                            </option>
+                         </select>
                 </div>
                 <div class="gpiic-context-devices-notapplied gpii-context-devices-notapplied">
                     <span class="gpiic-context-devices-notapplied-label"></span>
-                    <span class="gpiic-context-device-applies-label gpii-context-device-applies-label"></span>
-                    <span class="gpiic-context-devices-label gpii-context-devices-label"></span>
                 </div>
             </div>
             <div class="gpiic-context-header-time gpii-context-header-time">
