--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -52,7 +52,7 @@
     </div>
     <div class="gpiic-prefsEditor-contextContainer gpii-prefsEditor-contextContainer">
         <div class="gpiic-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header-stylingDark">
-            <a href="#" class="gpiic-prefsEditor-contextFrameLink" role="button" aria-label=""><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
+            <a href="#" class="gpiic-prefsEditor-contextFrameLink" aria-label=""><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
         </div>
         <div class="gpiic-prefsEditor-contextFrame-rows"></div>
     </div>
@@ -61,14 +61,14 @@
         <div class="gpiic-context-header-tabs gpii-context-header-tabs">
             <section id="tab1" class="gpiic-tab-conditions gpii-tab-conditions gpii-tab-active" >
                 <h2 class="gpii-context-conditions-label">
-                    <a href="#tab1">
+                    <a href="#tab1" class="gpiic-prefsEditor-conditionsLink" aria-label="">
                         <span class="gpiic-context-conditions-label"></span>
                     </a>
                 </h2>
             </section>
             <section id="tab2" class="gpiic-tab-share gpii-tab-share gpii-tab-deactive">
                 <h2>
-                    <a href="#tab2">
+                    <a href="#tab2" class="gpiic-prefsEditor-sharingLink" aria-label="">
                         <span class="gpiic-context-share-label gpii-context-sharing-label"></span>
                     </a>
                 </h2>
@@ -87,67 +87,44 @@
             </div>
             <div class="gpiic-context-header-devices gpii-context-header-devices">
                 <span class="gpii-devices-adjusterIcons gpii-devices-header-fontIcon"></span>
-                <span class="gpiic-context-header-devices-label gpii-context-header-devices-label"></span>
-                <div class="gpiic-context-devices-add-new gpii-context-devices-add-new" tabindex="0">
-                     <span class="gpiic-context-devices-add-new-label gpii-context-devices-add-new-label gpii-context-visible"></span>  
-                     <select class="gpiic-context-devices-list-items gpii-context-devices-list-items gpii-context-invisible"  tabindex="0">
-                            <option 
-                                class="gpiic-select-device-all-label gpii-select-device-labels gpii-select-device-labels-all">
-                            </option>
-                            <option
-                                class="gpiic-select-device-desktop-label gpii-select-device-labels"> 
-                            </option>
-                            <options
-                                class="gpiic-select-device-laptop-label gpii-select-device-labels">
-                            </options>
-                            <option
-                                class="gpiic-select-device-tablet-label gpii-select-device-labels">
-                            </option>
-                            <option
-                                class="gpiic-select-device-phone-label gpii-select-device-labels">
-                            </option>
-                            <option
-                                class="gpiic-select-device-kiosk-label gpii-select-device-labels">
-                            </option>
-                            <option
-                                class="gpiic-select-device-bankmachine-label gpii-select-device-labels">
-                            </option>
-                            <option
-                                class="gpiic-select-device-other-label gpii-select-device-labels gpii-select-device-labels-other">
-                            </option>
-                         </select>
+                <span id="deviceHeader" class="gpiic-context-header-devices-label gpii-context-header-devices-label"></span>
+                <div class="gpiic-context-devices-add-new gpii-context-devices-add-new">
+                    <select class="gpiic-context-devices-list-items gpii-context-devices-list-items gpii-context-visible" tabindex="0" aria-labelledby="deviceHeader">
+                        <option selected="selected" class="gpiic-select-device-all-label gpii-select-device-labels gpii-select-device-labels-all" role="option"></option>
+                        <option class="gpiic-select-device-desktop-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-laptop-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-tablet-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-phone-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-kiosk-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-bankmachine-label gpii-select-device-labels" role="option"></option>
+                        <option class="gpiic-select-device-other-label gpii-select-device-labels gpii-select-device-labels-other" role="option"></option>
+                    </select>
                 </div>
                 <div class="gpiic-context-devices-notapplied gpii-context-devices-notapplied">
-                    <span class="gpiic-context-devices-notapplied-label"></span>
+                    <span id="deviceDesc" class="gpiic-context-devices-notapplied-label" role="region" aria-live="assertive"></span>
                 </div>
             </div>
             <div class="gpiic-context-header-time gpii-context-header-time">
                 <span class="gpii-devices-adjusterIcons gpii-context-header-time-fontIcon"></span>
                 <span class="gpiic-context-header-time-label gpii-context-header-time-label"></span>
-               <div class="gpiic-context-time-add-new gpii-context-time-add-new" tabindex="0">
-                    <div class="gpiic-context-time-add-new-label gpii-context-time-add-new-label"></div>
-                    <div class="gpiic-context-time-whole-div gpii-context-time-whole-div">
+               <div class="gpiic-context-time-add-new gpii-context-time-add-new">
+                    <div class="gpiic-context-time-whole-div gpii-context-time-whole-div gpii-context-visible">
                         <input type="number" min="0" max="23" class="gpiic-context-time-from-hour gpii-context-time" tabindex="0">
-                        <span class="gpii-context-time-colon-label">:</span>
+                        <span class="gpiic-context-time-from-colon gpii-context-time-colon-label"></span>
                         <input type="number" min="0" max="59" class="gpiic-context-time-from-minute gpii-context-time" tabindex="0"> 
                         <span class="gpiic-context-time-to-label gpii-context-time-to-label"></span>
                         <input type="number" min="0" max="23" class="gpiic-context-time-to-hour gpii-context-time" tabindex="0">
-                        <span class="gpii-context-time-colon-label">:</span>
+                        <span class="gpiic-context-time-to-colon gpii-context-time-colon-label"></span>
                         <input type="number" min="0" max="59" class="gpiic-context-time-to-minute gpii-context-time" tabindex="0">
                     </div>
                 </div>
-                <div class="gpiic-context-times-notapplied gpii-context-times-notapplied">
-                    <span class="gpiic-context-times-notapplied-label"></span>
-                </div>
-                <div class="gpiic-context-times-new-record gpii-context-times-new-record">
-                    <span class="gpiic-context-times-new-record-label gpii-context-times-new-record-label"  tabindex="0"></span> 
-                    <div class="gpiic-context-times-new-record-line gpii-context-times-new-record-line" >
-                       <a href="#dpencil">
-                          <span class="gpiic-context-times-new-record-fontIcon-pencil gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-pencil" tabindex="0"></span>
-                       </a>
-                       <a href="#delete">
-                         <span class="gpiic-context-times-new-record-fontIcon-delete gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-delete" tabindex="0"></span>
-                       </a>
+                <div class="gpiic-context-times-notapplied gpii-context-times-notapplied gpii-context-visible">
+                    <span class="gpiic-context-times-notapplied-label" role="region" aria-live="assertive"></span>
+                    <div class="gpiic-context-times-new-record-line gpii-context-times-new-record-line gpii-context-invisible" >
+                        <input id="editTime" class="gpiic-prefsEditor-editTime-button gpii-context-edit-time-button" type="button" value="" tabindex="0"/>
+                        <label for="editTime" class="gpiic-context-times-new-record-fontIcon-pencil gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-pencil" role="presentation"></label>
+                        <input id="deleteTime" class="gpiic-prefsEditor-deleteTime-button gpii-context-delete-time-button" type="button" value="" tabindex="0"/>
+                        <label for="deleteTime" class="gpiic-context-times-new-record-fontIcon-delete gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-delete" role="presentation"></label>
                     </div>
                 </div>
             </div>
