GPII-1019-test: Write JSON object to sharing textarea. Create dataToSend object in gpiiSession. Implement preference conditions.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -78,10 +78,10 @@
             <div class="gpiic-context-header gpii-context-header" >
                 <input  type="text" value="" class="gpiic-context-header-untitled gpii-context-header-untitled" tabindex="0">
                     <span class="gpiic-context gpii-context-header-dotted "></span>
-                <div class="gpiic-context-baseset gpii-context-baseset" tabindex="0">
+                <div class="gpiic-context-baseset gpii-context-baseset">
                     <span class="gpiic-context-baseset-label"></span>
                 </div>
-                <div class="gpiic-context-deleteset gpii-context-deleteset" tabindex="0">
+                <div class="gpiic-context-deleteset gpii-context-deleteset">
                      <span class="gpiic-context-deleteset-label"></span>
                 </div>
             </div>
