GPII-1018: Fixing errors after review.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -52,7 +52,9 @@
     </div>
     <div class="gpiic-prefsEditor-contextContainer gpii-prefsEditor-contextContainer">
         <div class="gpiic-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header-stylingDark">
-            <a href="#" class="gpiic-prefsEditor-contextFrameLink" role="button" aria-label=""><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
+            <a href="#" class="gpiic-prefsEditor-contextFrameLink" role="button" aria-label="">
+                <span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span>
+            </a>
         </div>
         <div class="gpiic-prefsEditor-contextFrame-rows"></div>
     </div>
