GPII-1019: Fixing edit and delete buttons in conditions tab.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -123,10 +123,8 @@
                 <div class="gpiic-context-times-notapplied gpii-context-times-notapplied gpii-context-visible">
                     <span class="gpiic-context-times-notapplied-label" role="region" aria-live="assertive"></span>
                     <div class="gpiic-context-times-new-record-line gpii-context-times-new-record-line gpii-context-invisible" >
-                        <input id="editTime" class="gpiic-prefsEditor-editTime-button gpii-context-edit-time-button" type="button" value="" tabindex="0"/>
-                        <label for="editTime" class="gpiic-context-times-new-record-fontIcon-pencil gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-pencil" role="presentation"></label>
-                        <input id="deleteTime" class="gpiic-prefsEditor-deleteTime-button gpii-context-delete-time-button" type="button" value="" tabindex="0"/>
-                        <label for="deleteTime" class="gpiic-context-times-new-record-fontIcon-delete gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-delete" role="presentation"></label>
+                        <span for="editTime" class="gpiic-prefsEditor-editTime-button gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-pencil" role="button" tabindex="0"></span>
+                        <span for="deleteTime" class="gpiic-prefsEditor-deleteTime-button gpii-devices-adjusterIcons gpii-context-times-new-record-fontIcon-delete" role="button" tabindex="0"></span>
                     </div>
                 </div>
             </div>
