--- a/tests/html/AutoAdjust-Test.html
+++ b/tests/html/AutoAdjust-Test.html
@@ -14,35 +14,31 @@
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
         <!-- Preferences Editors specific files go here: -->
-        <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
-        <script type="text/javascript" src="../../src/shared/common/ariaUtility.js"></script>
-        <script type="text/javascript" src="../../src/shared/common/eventUtility.js"></script>
-        <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
-
-        <script type="text/javascript" src="../../src/shared/adjusters/js/activatableLabelsClickOnActivate.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/js/singleSelectionWithKeyboard.js"></script>
+        <script src="../../src/shared/common/ariaUtility.js"></script>
 
         <!-- The custom adjusters JS files -->
-        <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/js/autoAdjust.js"></script>
+        <script src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
+        <script src="../../src/shared/adjusters/js/autoAdjust.js"></script>
 
         <!--  These are tests that have been written using this page as data -->
+        <script type="text/javascript" src="../js/autoAdjustTestsUtils.js"></script>
         <script type="text/javascript" src="../js/autoAdjustTests.js"></script>
 
     </head>
     <body>
-    <h1 id="qunit-header">Auto Adjust Test Suite</h1>
-    <h2 id="qunit-banner"></h2>
-    <div id="qunit-testrunner-toolbar"></div>
-    <h2 id="qunit-userAgent"></h2>
-    <ol id="qunit-tests"></ol>
+        <h1 id="qunit-header">Auto Adjust Test Suite</h1>
+        <h2 id="qunit-banner"></h2>
+        <div id="qunit-testrunner-toolbar"></div>
+        <h2 id="qunit-userAgent"></h2>
+        <ol id="qunit-tests"></ol>
 
-    <div class="gpiic-onOffSwitch-container">
-        <input type="checkbox" id="onOffSwitchInputAutoAdjust" class="gpiic-onOffSwitch-input"/>
-        <span class="gpiic-prefsEditor-onOffSwitch fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-            <span class="fl-prefsEditor-switch-inner"></span>
-        </span>
-    </div>
-    <div class="gpiic-autoAdjust-description gpii-description"></div>
+        <div class="gpii-onOffSwitch-container">
+            <label class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch">Auto-adjust</label>
+            <input type="checkbox" id="onOffSwitchInputAutoAdjust" class="gpiic-onOffSwitch-input"/>
+            <span class="gpiic-prefsEditor-onOffSwitch fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+                <span class="fl-prefsEditor-switch-inner"></span>
+            </span>
+            <div class="gpiic-autoAdjust-description gpii-description">Preferences will be automatically adjusted based on background noise and ambient light levels.</div>
+        </div>
     </body>
 </html>
