--- a/tests/html/AutoAdjust-Test.html
+++ b/tests/html/AutoAdjust-Test.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html      PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Auto Adjust Tests</title>
@@ -21,7 +21,6 @@
         <script src="../../src/shared/adjusters/js/autoAdjust.js"></script>
 
         <!--  These are tests that have been written using this page as data -->
-        <script type="text/javascript" src="../js/autoAdjustTestsUtils.js"></script>
         <script type="text/javascript" src="../js/autoAdjustTests.js"></script>
 
     </head>
