--- a/tests/html/LeftPanel-Test.html
+++ b/tests/html/LeftPanel-Test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Auto Adjust Tests</title>
+        <title>PMT Context Test Suite</title>
 
         <!--  This is the jqUnit test css file -->
         <link rel="stylesheet" media="screen" href="../lib/qunit/qunit/css/qunit.css" />
@@ -13,16 +13,59 @@
         <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
+        <!-- The GPIIPrefsEditor JS files -->
+        <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
+
         <!-- The common JS files -->
         <script type="text/javascript" src="../../src/shared/common/ariaUtility.js"></script>
         <script type="text/javascript" src="../../src/shared/common/eventUtility.js"></script>
         <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
         <!-- The custom adjusters JS files -->
-        <script src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
-        <script src="../../src/pmt/js/PMTFrame.js"></script>
-        <script src="../../src/shared/common/GpiiStore.js"></script>
-        <script src="../../src/shared/common/GpiiSession.js"></script>
+        <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
+        <script type="text/javascript" src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/expandingAdjusters.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/onOffSwitch.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/iconCheck.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/contrastThemeNoPreview.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/contrastEnabled.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSizePCP.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSizePMT.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textSizePCP.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textSizePMT.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSizePCP.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSizePMT.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierEnabled.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPCP.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPMT.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierInvertColours.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierPosition.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/followingElement.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollowsFollowingElement.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/screenReaderFollowsFollowingElement.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
+
+        <!-- The JS files of the enactors of my custom adjusters -->
+        <script type="text/javascript" src="../../src/shared/enactors/js/contrastThemeNoPreview.js"></script>
+        <script type="text/javascript" src="../../src/shared/enactors/js/textSize.js"></script>
+        <script type="text/javascript" src="../../src/shared/enactors/js/cursorSize.js"></script>
+        <script type="text/javascript" src="../../src/shared/enactors/js/magnifier.js"></script>
+
+        <!-- The i18n JS files -->
+        <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
+
+        <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
+
+        <!-- PMT-specific files -->
+        <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
+        <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
+        <script type="text/javascript" src="../../src/pmt/js/PMTFrame.js"></script>
+
+        <!-- The GPII related files -->
+        <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
+        <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
 
         <!--  These are tests that have been written using this page as data -->
         <script type="text/javascript" src="../js/leftPanelTests.js"></script>
