GPII-1023: Adding auto-adjust category in PMT.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -18,6 +18,7 @@
             <div class="gpiic-languageGroup gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></div>
+            <div class="gpiic-prefsEditor-autoAdjustPanel gpii-prefsEditor-autoAdjustPanel gpii-prefsEditor-adjusterGroup"></div>
         </div>
     </div>
     <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
