--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -39,8 +39,8 @@
             <input type="button" class="gpii-prefsEditor-moreLess gpiic-magnifier-moreLess gpiic-magnifier-category" aria-controls="gpiic-magnifier-hiddenPanel" role="button"/>
         </div>
 
-        <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+<!--    <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
             <div class="gpiic-prefsEditor-autoAdjust"></div>
-        </div>
+        </div> -->
     </div>
 </section>
