--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -73,6 +73,7 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/magnifierFollowsFollowingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/screenReaderFollowsFollowingElement.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/showCrosshairs.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/addAutoAdjust.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/autoAdjust.js"></script>
 
         <!-- The JS files of the enactors of my custom adjusters -->
