GPII-1118: Finalizing navigation to conditions and preferences sets.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -56,7 +56,15 @@
                 <span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span>
             </a>
         </div>
-        <div class="gpiic-prefsEditor-contextFrame-rows"></div>
+        <div class="gpiic-prefsEditor-contextFrame-rows">
+            <div class="gpiic-prefsEditor-contextFrame-row gpii-prefsEditor-contextFrame-row-selected">
+                <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-contextFrame-setLabel"></span>
+                <span class="gpiic-prefsEditor-baseSetDescription gpii-prefsEditor-contextFrame-setLabelDescription"></span>
+                <span class="gpiic-prefsEditor-context-leftArrowIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-leftArrowIcon"></span>
+                <input id="editBaseSetButton" type="button" value="" aria-label="" class="gpiic-prefsEditor-context-edit-baseSet-button gpii-prefsEditor-context-edit-button gpii-context-invisible" tabindex="0"></input>
+                <label for="editBaseSetButton" class="gpiic-prefsEditor-context-baseSet-pencilIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-pencil-icon gpii-context-invisible"></span>
+            </div>
+        </div>
     </div>
     <div id="overlay" class="gpiic-context-overlay gpii-context-overlay"></div>
     <div id="modal" class="gpiic-context-modal gpii-context-modal">
