GPII-1145: Fixing the fonts of Conditions and Sharing panels

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -88,12 +88,12 @@
             <div class="gpiic-context-header gpii-context-header" >
                 <input  type="text" value="" class="gpiic-context-header-untitled gpii-context-header-untitled" tabindex="0">
                     <span class="gpiic-context gpii-context-header-dotted "></span>
-                <div class="gpiic-context-baseset gpii-context-baseset">
+                <!-- <div class="gpiic-context-baseset gpii-context-baseset">
                     <span class="gpiic-context-baseset-label"></span>
                 </div>
                 <div class="gpiic-context-deleteset gpii-context-deleteset">
                      <span class="gpiic-context-deleteset-label"></span>
-                </div>
+                </div> -->
             </div>
             <div class="gpiic-context-header-devices gpii-context-header-devices">
                 <span class="gpii-devices-adjusterIcons gpii-devices-header-fontIcon"></span>
