--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -58,11 +58,9 @@
         </div>
         <div class="gpiic-prefsEditor-contextFrame-rows">
             <div class="gpiic-prefsEditor-contextFrame-row gpii-prefsEditor-contextFrame-row-selected">
-                <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-contextFrame-setLabel"></span>
+                <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-contextFrame-setLabel gpii-context-span-cursor" tabindex="0" role="button"></span>
                 <span class="gpiic-prefsEditor-baseSetDescription gpii-prefsEditor-contextFrame-setLabelDescription"></span>
                 <span class="gpiic-prefsEditor-context-leftArrowIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-leftArrowIcon"></span>
-                <input id="editBaseSetButton" type="button" value="" aria-label="" class="gpiic-prefsEditor-context-edit-baseSet-button gpii-prefsEditor-context-edit-button gpii-context-invisible" tabindex="0"></input>
-                <label for="editBaseSetButton" class="gpiic-prefsEditor-context-baseSet-pencilIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-pencil-icon gpii-context-invisible"></span>
             </div>
         </div>
     </div>
