GPII-1148: The user cannot type invalid time.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -169,5 +169,13 @@
                 <input type="button" class="gpiic-error-backButton gpii-error-back">
             </div>
         </div>
+        <div class="gpiic-time-error-overlay gpii-error-overlay"></div>
+        <div class="gpiic-time-error-modal gpii-error-modal" role="alertdialog" aria-labelledby="alertTimeHeading" aria-describedby="alertTimeText">
+            <div class="gpii-error-notification">
+                <span id="alertTimeHeading" class="gpiic-time-error-header gpii-error-paddingTop-large gpii-error-notification-description"></span>
+                <span id="alertTimeText" class="gpiic-time-error-description gpii-error-paddingTop-small gpii-error-notification-description"></span>
+                <input type="button" class="gpiic-time-error-backButton gpii-error-back">
+            </div>
+        </div>
     </div>
 </form>
