GPII-1148: Time text box with two digits (e.g. 01:05). Alert in case of wrong format. We also fixed the edit and delete buttons (work also with SPACE and ENTER key). Translations for Spanish, German and Greek.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -119,13 +119,13 @@
                 <span class="gpiic-context-header-time-label gpii-context-header-time-label"></span>
                <div class="gpiic-context-time-add-new gpii-context-time-add-new">
                     <div class="gpiic-context-time-whole-div gpii-context-time-whole-div gpii-context-visible">
-                        <input type="number" min="0" max="23" class="gpiic-context-time-from-hour gpii-context-time" tabindex="0">
+                        <input type="tel" value="00" min="0" max="23" class="gpiic-context-time-from-hour gpii-context-time" tabindex="0">
                         <span class="gpiic-context-time-from-colon gpii-context-time-colon-label"></span>
-                        <input type="number" min="0" max="59" class="gpiic-context-time-from-minute gpii-context-time" tabindex="0"> 
+                        <input type="tel" value="00" min="0" max="59" class="gpiic-context-time-from-minute gpii-context-time" tabindex="0"> 
                         <span class="gpiic-context-time-to-label gpii-context-time-to-label"></span>
-                        <input type="number" min="0" max="23" class="gpiic-context-time-to-hour gpii-context-time" tabindex="0">
+                        <input type="tel" value="00" min="0" max="23" class="gpiic-context-time-to-hour gpii-context-time" tabindex="0">
                         <span class="gpiic-context-time-to-colon gpii-context-time-colon-label"></span>
-                        <input type="number" min="0" max="59" class="gpiic-context-time-to-minute gpii-context-time" tabindex="0">
+                        <input type="tel" value="00" min="0" max="59" class="gpiic-context-time-to-minute gpii-context-time" tabindex="0">
                     </div>
                 </div>
                 <div class="gpiic-context-times-notapplied gpii-context-times-notapplied gpii-context-visible">
