GPII-1292: Implementation of brightness condition. Fixing some errors in noise condition. Fixing bug when the user clicks on edit link.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -150,6 +150,23 @@
                     <span id="noiseDesc" class="gpiic-context-noise-any-label" role="region" aria-live="assertive"></span>
                 </div>
             </div>
+            <div class="gpiic-context-header-brightness gpii-context-header-brightness">
+                <span class="gpii-context-icons gpii-brightness-header-fontIcon"></span>
+                <span id="brightnessHeader" class="gpiic-context-header-brightness-label gpii-context-header-brightness-label"></span>
+                <div class="gpiic-context-brightness-add-new gpii-context-brightness-add-new">
+                    <select class="gpiic-context-brightness-list-items gpii-context-brightness-list-items gpii-context-visible" tabindex="0" aria-labelledby="brightnessHeader">
+                        <option selected="selected" class="gpiic-select-brightness-any-label gpii-select-brightness-labels gpii-select-brightness-labels-any" role="option"></option>
+                        <option class="gpiic-select-brightness-very-dark-label gpii-select-brightness-labels" role="option"></option>
+                        <option class="gpiic-select-brightness-dark-label gpii-select-brightness-labels" role="option"></option>
+                        <option class="gpiic-select-brightness-neutral-label gpii-select-brightness-labels" role="option"></option>
+                        <option class="gpiic-select-brightness-bright-label gpii-select-brightness-labels" role="option"></option>
+                        <option class="gpiic-select-brightness-very-bright-label gpii-select-brightness-labels" role="option"></option>
+                    </select>
+                </div>
+                <div class="gpii-context-any-brightness">
+                    <span id="brightnessDesc" class="gpiic-context-brightness-any-label" role="region" aria-live="assertive"></span>
+                </div>
+            </div>
 
             <div class="gpiic-link-copy-enter-email-address gpii-link-copy-enter-email-address">
                 <div class="gpiic-link-copy gpii-link-copy">
